View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029004 | Open CASCADE | OCCT:DRAW | public | 2017-08-16 15:45 | 2017-09-29 16:29 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0029004: DRAW - update help of chrono and dchrono commands | ||||
Description | Changes in DRAW commands chrono and dchrono made in the frames of 0027691 need to be reflected in description of these commands shown by DRAW "help" command. | ||||
Steps To Reproduce | Fix pushed to branch CR29004, please review | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR29004 has been created by abv. SHA-1: 76f3cdc8f08f38d35fcdb961fc4be7281133dd0d Detailed log of new commits: Author: abv Date: Tue Aug 29 06:59:28 2017 +0300 0029004: DRAW - update help of chrono and dchrono commands Help of DRAW commands chrono and dchrono is updated according to changes made within 0027691 |
|
Reviewed. No need to test. Only check of compilation of OCCT is enough. |
|
Combination OCCT : CR29004 SHA-1: 76f3cdc8f08f38d35fcdb961fc4be7281133dd0d Products : master has been compiled on Windows, Linux and MacOS platforms Number of compiler warnings: Warnings OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 4 (4 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) |
|
Branch CR29004 has been deleted by kgv. SHA-1: 76f3cdc8f08f38d35fcdb961fc4be7281133dd0d |
occt: master 7d3225b5 2017-08-29 03:59:28
Committer: bugmaster Details Diff |
0029004: DRAW - update help of chrono and dchrono commands Help of DRAW commands chrono and dchrono is updated according to changes made within 0027691 |
Affected Issues 0029004 |
|
mod - src/Draw/Draw_BasicCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-08-16 15:45 |
|
New Issue | |
2017-08-16 15:45 |
|
Assigned To | => apn |
2017-08-16 15:46 |
|
Relationship added | child of 0027691 |
2017-08-29 06:59 | git | Note Added: 0070023 | |
2017-08-29 07:00 |
|
Assigned To | apn => msv |
2017-08-29 07:00 |
|
Status | new => resolved |
2017-08-29 07:00 |
|
Steps to Reproduce Updated | |
2017-08-29 09:47 |
|
Note Added: 0070029 | |
2017-08-29 09:47 |
|
Assigned To | msv => bugmaster |
2017-08-29 09:47 |
|
Status | resolved => reviewed |
2017-08-29 10:58 | bugmaster | Note Added: 0070032 | |
2017-08-29 10:58 | bugmaster | Test case number | => Not required |
2017-08-29 10:58 | bugmaster | Status | reviewed => tested |
2017-08-31 18:37 | bugmaster | Changeset attached | => occt master 7d3225b5 |
2017-08-31 18:37 | bugmaster | Status | tested => verified |
2017-08-31 18:37 | bugmaster | Resolution | open => fixed |
2017-09-04 18:20 | git | Note Added: 0070197 | |
2017-09-29 16:17 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:29 |
|
Status | verified => closed |