0029004: DRAW - update help of chrono and dchrono commands

Help of DRAW commands chrono and dchrono is updated according to changes made within #27691